Add scanner.